[build-system]
requires = [
    "setuptools",
    "wheel",
    "setuptools-scm",
]

[tool.setuptools]
packages = ["goat_storytelling_agent"]

[project]
name = "goat_storytelling_agent"
version = "0.0.2-koboldcpp"
description = "GOAT Storytelling Agent modified for KoboldCpp/Mistral Large"
dependencies = [
    "requests==2.31.0"
]
